fixed gap between header and jumbotron, had an - behind the closing header

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <li>
                     <a href="#reach-out">Reach Out</a>
                 </li>
-            </ul>ß
+            </ul>
         </nav>
-        </header>˜
+        </header>
 
         <!--hero/jumbotron-->
         <section class="hero">
