update to the reach me section, split info into 2 colomns

--- a/index.html
+++ b/index.html
@@ -145,14 +145,12 @@
         </section>
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3373.0719560598786!2d-110.77725174886021!3d32.2830433162212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d6696c3254e2d3%3A0xf0879f6c8c432dfb!2s4151%20N%20Ave%20De%20Montezuma%2C%20Tucson%2C%20AZ%2085749!5e0!3m2!1sen!2sus!4v1595800554055!5m2!1sen!2sus" 
-                  frameborder="0" 
-                  height="400"
-                  width="400"                    
+                  frameborder="0"               
                   style="border: 0;" 
                   allowfullscreen
                 >
