--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 
         <!-- "what you do" section-->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
-            
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
             <div>
                 <!-- what you do SVG-->
                 <img src="./assets/images/step-1.svg" alt=""/>
@@ -120,8 +121,11 @@
 
         <!--"meet the trainers" section -->
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
             <h2 class="section-title primary-border">
                 Meet The Trainers</h2>
+            </div>
+
                 <article class="trainer">
                     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
                     <div class="trainer-bio text-left">
@@ -160,7 +164,10 @@
 
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
+            
             <div class="contact-info">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3373.0719560598786!2d-110.77725174886021!3d32.2830433162212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d6696c3254e2d3%3A0xf0879f6c8c432dfb!2s4151%20N%20Ave%20De%20Montezuma%2C%20Tucson%2C%20AZ%2085749!5e0!3m2!1sen!2sus!4v1595800554055!5m2!1sen!2sus" 
