add flexbox to the steps

--- a/index.html
+++ b/index.html
@@ -93,29 +93,57 @@
             <div class="flex-row">
                 <h2 class="section-title secondary-border">What You Do</h2>
             </div>
-            <div>
-                <!-- what you do SVG-->
-                <img src="./assets/images/step-1.svg" alt=""/>
-                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-                <p>You're already here, so why not?</p>
+            <div class="step">
+                <h3>Step 1:</h3>
+                <div class="step-info">
+                  <div class="step-img">
+                    <img src="./assets/images/step-1.svg" alt=""/>
+                 </div>
+                  <div class="step-text">
+                    <h4>Fill Out the Form Above</h4>
+                    <p>You're already here, so why not?</p>
+                  </div>
+                </div>
+            </div>
+        
+
+            <div class="step">
+                <h3>Step 2:</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                      <img src="./assets/images/step-2.svg" alt=""/>
+                    </div>
+                  <div class="step-text">
+                    <h4>Consult with One of Our Trainers</h4>
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                  </div>
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/images/step-2.svg" alt=""/>    
-                <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            <div class="step">
+                <h3>Step 3:</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                      <img src="./assets/images/step-3.svg" alt=""/>
+                    </div>
+                  <div class="step-text">
+                      <h4>Get Running</h4>
+                      <p>Hit the ground running (litterally) once your trainer lays out your plan.</p>
+                  </div>
+                </div>                
             </div>
 
-            <div>
-                <img src="./assets/images/step-3.svg" alt=""/>
-                <h3>Step 3: <span>Get Running.</span></h3>
-                <p>Hit the ground running (litterally) once your trainer lays out your plan.</p>
-            </div>
-
-            <div> 
-                <img src="./assets/images/step-4.svg" alt=""/>
-                <h3>Step 4: <span>See Results.</span></h3>
-                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            <div class="step"> 
+                <h3>Step 4:</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                      <img src="./assets/images/step-4.svg" alt=""/>
+                    </div>
+                  <div class="step-text">
+                      <h4>See Results</h4>
+                      <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                  </div>
+                </div>             
             </div>
         </section>
 
@@ -167,7 +195,7 @@
             <div class="flex-row">
                 <h2 class="section-title secondary-border">Reach Out</h2>
             </div>
-            
+
             <div class="contact-info">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3373.0719560598786!2d-110.77725174886021!3d32.2830433162212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d6696c3254e2d3%3A0xf0879f6c8c432dfb!2s4151%20N%20Ave%20De%20Montezuma%2C%20Tucson%2C%20AZ%2085749!5e0!3m2!1sen!2sus!4v1595800554055!5m2!1sen!2sus" 
