--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         <!-- "what you do" section-->
         <section id="what-you-do" class="steps">
             <div class="flex-row">
-                <h2 class="section-title secondary-border">What You Do</h2>
+                <h2 class="section-title secondary-border">
+                    What You Do</h2>
             </div>
             <div class="step">
                 <h3>Step 1:</h3>
@@ -193,7 +194,8 @@
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
             <div class="flex-row">
-                <h2 class="section-title secondary-border">Reach Out</h2>
+                <h2 class="section-title secondary-border">
+                    Reach Out</h2>
             </div>
 
             <div class="contact-info">
