--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <h2 class="section-title primary-border">
                 Meet The Trainers</h2>
             </div>
-            
+
             <div class="trainers">
                 <article class="trainer">
                     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
@@ -200,16 +200,26 @@
             </div>
 
             <div class="contact-info">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3373.0719560598786!2d-110.77725174886021!3d32.2830433162212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d6696c3254e2d3%3A0xf0879f6c8c432dfb!2s4151%20N%20Ave%20De%20Montezuma%2C%20Tucson%2C%20AZ%2085749!5e0!3m2!1sen!2sus!4v1595800554055!5m2!1sen!2sus" 
-                  frameborder="0"               
-                  style="border: 0;" 
-                  allowfullscreen
-                >
-                </iframe>
-            <div class="contact-form">
-                <h3>Contact Us</h3>
-                <form>
+                <div>
+                  <h3>Run Buddy</h3>
+                  <p>
+                    Any questions or concerns before signing up?
+                    <br/>
+                    Let us know and we'll be happy to talk to you!
+                  </p>
+
+                  <address>
+                    55 Main Street <br/>
+                    Some Town, Ca <br/>
+                    12345<br/>
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                  </address>
+                </div>
+
+                <div class="contact-form">
+                  <h3>Contact Us</h3>
+                  <form>
                     <label for="contact-name">Your Name</label>
                     <input type="text" id="contact-name" placeholder="Your Name"/>
 
@@ -217,25 +227,16 @@
                     <textarea id="contact-message" placeholder="Meassage"></textarea>
 
                     <button type="submit">Submit</button>
-                </form>
-            </div>
-            <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br/>
-                    Let us know and we'll be happy to talk to you!
-                </p>
-                <address>
-                    55 Main Street <br/>
-                    Some Town, Ca <br/>
-                    12345<br/>
-                    P: 555.RUN.BUDZ (555.786.2839)<br/>
-                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </address>
+                  </form>
+                </div>
+
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3373.0719560598786!2d-110.77725174886021!3d32.2830433162212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d6696c3254e2d3%3A0xf0879f6c8c432dfb!2s4151%20N%20Ave%20De%20Montezuma%2C%20Tucson%2C%20AZ%2085749!5e0!3m2!1sen!2sus!4v1595800554055!5m2!1sen!2sus" 
+                  frameborder="0"               
+                  style="border: 0;" 
+                  allowfullscreen></iframe>
             </div>
 
-            </div>
         </section>
 
         <!-- footer -->
